2001-09-23  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Set version to 1.6.0.

	* Makefile.am (EXTRA_DIST): Add BUGS.

	* NEWS: Incorporate Baptiste's notes.

	* BUGS: New file for list of known bugs.

	* README: Note about file BUGS.

2001-09-24 Baptiste Lepilleur <gaiacrtn@free.fr>

	* include/cppunit/TestAssert.h : changed header order to remove
	warning on VC++

	* include/cppunit/TestCaller.h : bugfix: threw 'new Exception'
	instead of 'Exception'.

2001-09-23  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* doc/footer.html: Put devel list in mailto tag.

	* doc/Makefile.am (man_MANS): Restore ability to install manpages.
	(htmldir): HTML pages installed under $(pkgdatadir).

	* doc/other_documentation.dox: Reference cookbook.html
	in same directory.  Remove obsolete text.

	* configure.in: Do not set CFLAGS; remove --enable-debug-mode.

	* include/cppunit/Portability.h: 
	* include/cppunit/extensions/HelperMacros.h: Allow user
	to request the old-style CU_TEST family of macros.

	* doc/Doxyfile.in (EXCLUDE_PATTERNS): Remove estring.h.

	* README: Add contact and bug-reporting info.

	* INSTALL-unix: New.  Move the unix install notes here
	from README.

	* AUTHORS: Put myself on the list.

2001-09-21 Baptiste Lepilleur <gaiacrtn@free.fr>
	
	* include/cppunit/TestFailure.h : made destructor virtual.

	* INSTALL-WIN32.txt : added some more infos about DSPlugIn.

	* src/msvc6/DSPlugIn/DSPlugIn.rgs: added some registry data
	that where missing to register the COM object.

	* src/msvc6/DSPlugIn/DSPlugIn.rc: updated some dll version info.

	* src/msvc6/DSPlugIn/DSPlugIn.dsp: fixed the custom build step to
	register the DLL using regsvr32.exe. Added a post-build step to 
	copy the dll to the lib/ directory. This prevent a blocking 
	compilation error if the DLL is in use by VC++.

2001-09-20  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Makefile.am (snapshot): Replace "date -I" GNUism with portable